--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "rsync",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "description": "Rsync cli wrapper",
   "main": "rsync.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mattijs/node-rsync"
+    "url": "https://github.com/temtum/node-rsync"
   },
   "keywords": [
     "rsync",
@@ -13,13 +13,12 @@
     "cli",
     "command"
   ],
-  "author": "Mattijs Hoitink <mattijs@monkeyandmachine.com>",
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.5.3",
-    "sinon": "^1.17.4"
+    "chai": "3.5.0",
+    "mocha": "6.2.1",
+    "sinon": "1.17.4"
   },
   "scripts": {
     "test": "mocha -R spec tests/*.test.js"
